<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="50dp" >

    <ImageView
        android:id="@+id/taskimg"
        android:layout_width="69dp"
        android:layout_height="100dp"
        android:contentDescription="@string/hello_world"
        android:paddingLeft="12dp"
        android:src="@raw/user" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="12dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/myPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/MyEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:paddingLeft="12dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/email" />

        <Button
            android:id="@+id/edit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit" />

    </LinearLayout>

</LinearLayout>
