<?xml version="1.0" encoding="utf-8"?>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
          android:background="#CDF5FD" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:src="@raw/login"
                android:contentDescription="@string/acid" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="19dp"
                android:text="@string/welcome_to"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            android:layout_marginBottom="12dp" >

              <EditText
                  android:id="@+id/editText1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:ems="10"
                  android:hint="@string/username"
                  android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
         
            android:layout_marginBottom="12dp">

               <EditText
                   android:id="@+id/editText2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginBottom="21dp"
                   android:ems="10"
                   android:hint="@string/password"
                   android:inputType="textPassword" />
            
        </TableRow>
        <TableRow
    android:id="@+id/tableRow5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:paddingLeft="72dp"
   android:paddingRight="72dp"
   android:layout_marginBottom="12dp"
   >

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="#00A9FF"
        android:minHeight="32dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="#00A9FF"
        android:minHeight="32dp"
        android:paddingTop="7dp"
        android:paddingLeft="20dp"
        android:text="@string/forget"
        android:textColor="#fff" />

</TableRow>

    </TableLayout>

