<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1F3F4" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="100dp" >

        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:padding="12dp"
                android:text="@string/contact"
                android:textSize="25sp" />

        </TableRow><TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_weight="1"
                android:ems="10"
                android:hint="@string/username"
                android:background="#fff"

                android:layout_marginBottom="5dp"
                android:padding="12dp" >
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
   <EditText
                android:id="@+id/phoneEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" 
                android:hint="@string/phone_number"
                android:background="#fff"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:layout_weight="1"
                         
            />
           

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
 
     <EditText
                android:id="@+id/emailEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:layout_weight="1"
                android:ems="10" 
                android:hint="@string/email_address"
                android:background="#fff"
                android:layout_marginBottom="5dp"
                android:padding="12dp"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.66"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:text="@string/send" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>
