<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/parties"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="264dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.19"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#fff"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"
            android:layout_marginTop="10dp" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp" >

            <EditText
                android:id="@+id/passcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8.33"
                android:background="#fff"
                android:ems="10"
                android:padding="12dp"
                android:hint="@string/passcode" 
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" 
                android:background="#00B9F0"
                android:textColor="#fff"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>